<resources>
    <string name="app_name">Greeting_tool</string>
    <string name="title_home">Home</string>
    <string name="title_User">User</string>
    <string name="NearbyMessage">NearByMessage</string>
    <string name="SendMessage">SendMessage</string>
    <string name="Preview">Preview</string>
    <string name="log_out">Log out</string>
    <string name="cancel_account">Cancel account</string>
    <string name="history">History</string>
    <string name="enter_postcode">Enter Postcode</string>
    <string name="postcode">Postcode</string>
    <string name="submit">Submit</string>
    <string name="account">Account</string>
    <string name="Login">Login</string>
    <string name="user_id">User ID</string>
    <string name="password">password</string>
    <string name="sign_in">Sign in</string>
    <string name="welcome">Welcome,</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="intro">intro</string>
    <string name="back_login">back_login</string>
    <string name="login_image">Login_image</string>
    <string name="signup_text">signup_text</string>
    <string name="signup_back">signup_back</string>
    <string name="signup">signup</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="ar_greeting_title">ar_greeting_title</string>
    <string name="decoration">decoration</string>
    <string name="cancel_text">cancel text</string>
    <string name="title_postcode">postcode title</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="email">Email</string>
    <string name="please_enter_userid_and_email">Please Enter UserID and Email</string>
    <string name="please_re_set_password">Please Re-Set Password</string>
    <string name="enter_security_code">Enter Security Code</string>
    <string name="happynewyear">Happy new year</string>
    <string name="greeting_make">greeting_make</string>
    <string name="user_help">user help</string>
    <!--<string name="title_notifications">Notifications</string>-->
</resources>