<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".Postcode_fill">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_postcode"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/postcode"
        android:layout_width="match_parent"
        android:layout_height="50sp"
        android:hint="@string/postcode" />

    <Button
        android:id="@+id/submit_postcode_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/submit" />
</LinearLayout>