<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.IntroPage.ReSetPassWord">

    <ImageView
        android:id="@+id/please_enter_title"
        android:layout_width="340dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/please_enter_userid_and_email"
        android:src="@drawable/enter_title"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp"
        app:layout_constraintVertical_bias="0.52" />

    <EditText
        android:id="@+id/userID_reset"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:background="@drawable/round_background"
        android:hint="@string/user_id"
        android:inputType="text"
        android:maxLength="30"
        android:padding="16dp"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_enter_title"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/re_set_email"
        android:layout_width="320dp"
        android:layout_height="56dp"
        android:background="@drawable/round_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="16dp"
        android:textColorHint="#808080"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userID_reset"
        android:layout_marginTop="30dp"/>

    <ImageButton
        android:id="@+id/ResetButton"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:contentDescription="@string/submit"
        android:src="@drawable/submit_1"
        android:background="?attr/selectableItemBackground"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/re_set_email"
        android:layout_marginTop="40dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>