<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_red"
    tools:context=".ui.user.UserFragment">

    <ImageView
        android:id="@+id/backgroundImage"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerInside"
        android:src="@drawable/userpage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <ImageView
        android:id="@+id/background_rec2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ar_greeting_title"
        android:src="@drawable/userpage_re"
        android:scaleType="centerInside"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/action_logout"
        app:layout_constraintDimensionRatio="H,0.56:1"
        android:layout_marginTop="40dp"/>
    
    <ImageButton
        android:id="@+id/notification_icon"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/ar_greeting_title"
        android:src="@drawable/notification"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/background_rec2"
        app:layout_constraintDimensionRatio="H,1.45:1"
        android:scaleType="fitCenter"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.2"
        app:layout_constraintWidth_percent="0.21"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"/>


    <TextView
        android:id="@+id/welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textSize="35sp"
        android:textColor="@color/black"
        android:fontFamily="@font/raleway"
        app:layout_constraintTop_toTopOf="@+id/background_rec2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="70dp" />

    <TextView
        android:id="@+id/text_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textAlignment="textStart"
        android:textSize="30sp"
        android:fontFamily="@font/raleway"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
        />

    <ImageButton
        android:id="@+id/action_logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/log_out"
        android:src="@drawable/logout_button"
        android:scaleType="fitCenter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_percent="0.09"
        app:layout_constraintWidth_percent="0.18" />

    <ImageButton
        android:id="@+id/history"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="58dp"
        android:background="@android:color/transparent"
        android:src="@drawable/history_button"
        android:contentDescription="@string/history"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_user"
        android:scaleType="centerInside"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        app:layout_constraintDimensionRatio="H,1.453:1"
        />

    <ImageButton
        android:id="@+id/cancel_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="58dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/cancel_text"
        android:scaleType="fitCenter"
        android:src="@drawable/cancel_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.3" />

    <CheckBox
        android:id="@+id/notification_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Send Notification"
        app:layout_constraintBottom_toTopOf="@+id/welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/backgroundImage"
        app:layout_constraintVertical_bias="0.476" />

</androidx.constraintlayout.widget.ConstraintLayout>